# alignsim

./: pyproject.toml
alignsim/: calculate.py  distributions.py  experiments_ec.py  simulate.py  visualise.py
notebooks/: error_consistency_experiments.ipynb  error_consistency_in_terms_of_overlap.ipynb  error_consistency_usage.ipynb  gaussian_copulas_for_correlated_facilities.ipynb  synthetic_test_data.csv
