[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "alignsim"
version = "0.1.0"
description = "A computational experiment library for evaluating error consistency and alignment metrics."
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "ipykernel"
]
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["."]
include = ["alignsim*"]
